<resources>
    <string name="app_name">Horoscoop</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="uw_gegevens">Uw gegevens</string>
    <string name="uw_naam">Uw naam</string>
    <string name="uw_voornaam">Uw voornaam</string>
    <string name="title_activity_select_geboortejaar">Selecteer uw geboortejaar</string>
    <string name="title_activity_horoscoop">Selecteer uw horoscoop</string>
    <string name="geboortejaar">Geboortejaar:</string>
    <string name="selecteer_geboortejaar">Selecteer uw geboortejaar</string>
    <string name="selecteer_horoscoop">Selecteer uw horoscoop</string>
    <string name="toon_info">info</string>
    <string name="naam">Naam</string>
    <string name="horoscoop">Horoscoop</string>
</resources>
