<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uw_gegevens"
        android:id="@+id/textView_uw_gegevens"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_naam"
        android:layout_below="@+id/textView_uw_gegevens"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textView_uw_gegevens"
        android:hint="@string/uw_naam"
        android:layout_marginBottom="16dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_voornaam"
        android:layout_below="@+id/editText_naam"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/uw_voornaam"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geboortejaar"
        android:id="@+id/textView_Geboortejaar"
        android:layout_below="@+id/editText_voornaam"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecteer_geboortejaar"
        android:id="@+id/button_selecteer_geboortejaar"
        android:layout_below="@+id/textView_Geboortejaar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecteer_horoscoop"
        android:id="@+id/button_selecteer_horoscoop"
        android:layout_below="@+id/button_selecteer_geboortejaar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/imageView_keuze_horoscoop"
        android:layout_below="@+id/button_selecteer_horoscoop"
        android:minHeight="80dp"
        android:minWidth="80dp"
        android:src="@drawable/boogschutter"/>


</RelativeLayout>
